--- a/data/grants.yaml
+++ b/data/grants.yaml
@@ -16,16 +16,16 @@ universities:
 
 questions:
   - question: "Какие документы нужны для подачи на грант?"
-    answer: "Для подачи на грант нужны паспорт, аттестат об образовании с переводом на китайский или английский язык, фотографии, медицинская справка и мотивационное письмо. Мы поможем собрать и правильно оформить все документы."
+    answer: "Для подачи на грант нужны паспорт, аттестат об образовании с переводом на китайский или английский язык, фотографии, медицинская справка и мотивационное письмо. Мы поможем собрать и правильно оформить все документы."
 
   - question: "Когда лучше подавать заявку на грант?"
-    answer: "Лучше всего подавать заявку за 6-8 месяцев до начала учебного года. В Китае учебный год начинается в сентябре, поэтому оптимальное время для подачи - январь-март."
+    answer: "Лучше всего подавать заявку за 5-6 месяцев до начала учебного года. В Китае учебный год начинается в сентябре, поэтому оптимальное время для подачи - март-апрель."
 
   - question: "Нужно ли знать китайский язык для обучения?"
     answer: "Нет, знание китайского языка для поступления не требуется. Первый год обучения посвящен изучению китайского языка в языковой школе при университете."
 
   - question: "Какие специальности доступны для обучения?"
-    answer: "Доступны все основные направления: технические, экономические, медицинские, гуманитарные. Популярные специальности включают международную экономику, компьютерные науки, медицину, инженерное дело и бизнес-администрирование."
+    answer: "Доступны все основные направления: технические, экономические, медицинские, гуманитарные. Популярные специальности включают международную экономику, компьютерные науки, медицину, инженерное дело и бизнес-администрирование."
 
   - question: "Как проходит обучение в Китае?"
     answer: "Обучение включает лекции, семинары и практические занятия. Первый год посвящен изучению китайского языка. Затем начинается обучение по специальности на китайском или английском языке, в зависимости от выбранной программы."
